# langchain-singlestore

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTE.md  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
docs/: SQL_DATABASE_RETRIEVER_IMPLEMENTATION.md  chat.ipynb  chat_message_history.ipynb  document_loaders.ipynb  llms.ipynb  provider.ipynb  retrievers.ipynb  sql_database_retriever.ipynb  stores.ipynb  text_embedding.ipynb  toolkits.ipynb  tools.ipynb  vectorstores.ipynb
examples/: examples_sql_database_retriever.py
langchain_singlestore/: __init__.py  _filter.py  _utils.py  cache.py  chat_message_history.py  chat_models.py  document_loaders.py  embeddings.py  retrievers.py  sql_database_retriever.py  toolkits.py  tools.py  vectorstores.py
tests/integration_tests/: conftest.py  test_cache.py  test_chat_message_history.py  test_chat_models.py  test_document_loaders.py  test_embeddings.py  test_retrievers.py  test_sql_database_retriever.py  test_tools.py  test_vectorstores.py  test_vectorstores_with_precomputed_embeddings.py
tests/unit_tests/: README.md  test_cache.py  test_chat_message_history.py  test_chat_models.py  test_document_loaders.py  test_embeddings.py  test_filter.py  test_sql_database_retriever.py  test_tools.py  test_utils.py  test_vectorstores.py
